# old-uscauv-ros-pkg

./: .gitignore  Makefile  README.md  buildinfo  seabee3_cturtle.rosinstall  stack.xml
auv_controls/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
auv_controls/cfg/: ControlServer.cfg  PID.cfg
auv_controls/launch/: axis_command_test.launch  control_server.launch  pose_command_test.launch  seabee3_adapter.launch  seabee3_controls.launch
auv_controls/msg/: FeedbackLoop.msg
auv_controls/nodes/: axis_command_test_node.cpp  control_server_node.cpp  pose_command_test_node.cpp  seabee3_adapter_node.cpp
auv_controls/src/: controller.cpp  pid.cpp
auv_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
auv_msgs/msg/: ColorEncodedImage.msg  MaskedTwist.msg  MatchedShape.msg  MatchedShapeArray.msg  MotorPower.msg  MotorPowerArray.msg  TrackedObject.msg  TrackedObjectArray.msg
auv_physics/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  simulation_service_client.sh
auv_physics/cfg/: Drag.cfg  PhysicsSimulator.cfg  ThrusterModel.cfg
auv_physics/launch/: physics_simulator.launch  physics_simulator_bringup.launch  physics_simulator_demo.launch  thruster_axis_model_test.launch  thruster_mapper.launch
auv_physics/msg/: SimulationInstruction.msg  SimulationState.msg
auv_physics/nodes/: physics_simulator_node.cpp  thruster_axis_model_test_node.cpp  thruster_mapper_node.cpp
auv_physics/params/: simulation.yaml  water_temperature_density_map.yaml
auv_physics/src/: ode_conversions.cpp  thruster_axis_model.cpp
auv_physics/srv/: SimulationCommand.srv
auv_vision/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
auv_vision/cfg/: OpticalFlow.cfg
auv_vision/launch/: bin_differentiator.launch  bin_differentiator_demo.launch  directional_pair.launch  optical_flow.launch  optical_flow_demo.launch  vision_pipeline.launch  vision_pipeline_bringup.launch  vision_pipeline_demo.launch  vision_view.launch
auv_vision/nodes/: bin_differentiator_node.cpp  optical_flow_node.cpp
color_classification/: CMakeLists.txt  manifest.xml  package.xml
color_classification/launch/: color_classifier.launch  color_classifier_demo.launch  static_color_classifier_demo.launch
color_classification/nodes/: color_classifier_node.cpp
color_classification/src/: svm_color_classifier.cpp  svm_trainer.cpp
cpp11/: CMakeLists.txt  package.xml
cpp11/cmake/: cpp11.cmake
image_segmentation/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
image_segmentation/cfg/: GraphBasedSegmentation.cfg
image_segmentation/launch/: image_segmentation.launch  image_segmentation_demo.launch
image_segmentation/nodes/: image_segmentation_node.cpp
image_segmentation/src/: graph_based_segmentation.cpp
image_transforms/: CMakeLists.txt  manifest.xml  package.xml
image_transforms/launch/: image_scaler.launch
image_transforms/nodelets/: image_scaler.cpp  nodelet_plugins.xml
image_transforms/nodes/: image_scaler_node.cpp
object_tracking/: CMakeLists.txt  manifest.xml  package.xml
object_tracking/cfg/: ObjectTracker.cfg  TrackedObject.cfg
object_tracking/launch/: unimodal_object_tracker.launch  unimodal_object_tracker_demo.launch
object_tracking/nodes/: unimodal_object_tracker_node.cpp
object_tracking/src/: kalman_filter.cpp
seabee3_actions/: CMakeLists.txt  package.xml
seabee3_common/: CMakeLists.txt  Makefile  mainpage.dox  package.xml
seabee3_common/cfg/: camera3.ini
seabee3_common/launch/: camera1.launch  camera2.launch  camera4.launch  camera_calibration_converter.launch  generic_camera.launch  robot_model_transforms.launch  start_seabee.launch  vision_pipeline_demo.launch
seabee3_common/nodelets/: nodelet_plugins.xml
seabee3_common/nodes/: image_array_viewer.cpp
seabee3_common/params/: camera1.yaml  camera1_underwater.yaml  camera2.yaml  camera2_driver.yaml  camera4.yaml  structure_types.yaml
seabee3_common/src/: CMakeLists.txt  colors.cpp  markers.cpp  movement.cpp  recognition_primitives.cpp  seabee_movement_policy.cpp  seabee_recognition_policy.cpp
seabee3_common/udev/: 01-seabee.rules  81-seabee.rules  81-uscauv.rules  install_seabee_udev.sh  install_udev.sh  usb-notify.sh
seabee3_driver/: CMakeLists.txt  manifest.xml  package.xml
seabee3_driver/cfg/: MotorValues.cfg
seabee3_driver/launch/: motor_values_gui.launch  seabee3_driver.launch
seabee3_driver/nodelets/: CMakeLists.txt  seabee3_driver.cpp
seabee3_driver/nodes/: motor_values_gui_node.cpp
seabee3_driver/params/: reconfigure.yaml  surface_pressure.yaml
seabee3_driver/src/: bee_stem3.cpp  bee_stem3_driver.cpp  seabee3_driver.cpp
seabee3_driver/srv/: ResetPose.srv  SetDesiredDepth.srv  SetDesiredRPY.srv
seabee3_msgs/: CMakeLists.txt  package.xml
seabee3_msgs/msg/: Landmark.msg  MotorVals.msg  NamedImage.msg  NamedImageArray.msg  Trajectory.msg  TrajectoryInterval.msg  TrajectoryWaypoint.msg
seabee3_msgs/srv/: CalibrateDouble.srv  SetEnabledColors.srv
shape_matching/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
shape_matching/cfg/: ShapeMatcher.cfg
shape_matching/launch/: shape_matcher.launch  shape_matcher_demo.launch
shape_matching/nodes/: shape_matcher.cpp
shape_matching/params/: image_proc.yaml
uscauv_build/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uscauv_build/cmake/: generate_common_header.cmake
uscauv_build/scripts/: generate_common_header.py
uscauv_camera/: CMakeLists.txt  manifest.xml  package.xml
uscauv_camera/launch/: monocular_calibration.launch  monocular_camera.launch  monocular_camera_pipeline.launch  monocular_pair.launch  monocular_pipeline_base.launch
uscauv_common/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uscauv_common/cfg/: RANSAC.cfg
uscauv_common/src/: action_token.cpp  (+20 more)
uscauv_joystick/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uscauv_ros_pkg/: CMakeLists.txt  package.xml
uscauv_scripts/: CMakeLists.txt  install_uscauv_scripts  manifest.xml  package.xml  uscauv.bash
uscauv_utilities/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
(+1778 files in other folders)
