<package>
  <name>auv_msgs</name>
  <description>
    Messages used in USC AUV projects.
  </description>
  <version>1.0.0</version>
  <author>nalyd</author>
  <maintainer email="turtlecannon@gmail.com">nalyd</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/auv_msgs</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs </build_depend>
  <build_depend>visualization_msgs </build_depend>

  <run_depend>std_msgs </run_depend>
  <run_depend>sensor_msgs </run_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>


