# Catkin User Guide: http://www.ros.org/doc/groovy/api/catkin/html/user_guide/user_guide.html
# Catkin CMake Standard: http://www.ros.org/doc/groovy/api/catkin/html/user_guide/standards.html
cmake_minimum_required(VERSION 2.8.3)
project(auv_physics)
# Load catkin and all dependencies required for this package
# TODO: remove all from COMPONENTS that are not catkin packages.
find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs geometry_msgs tf tf_conversions dynamic_reconfigure uscauv_common auv_msgs seabee3_msgs)

# Eigen 3
find_package(Eigen REQUIRED)

include_directories(include ${catkin_INCLUDE_DIRS} ${Eigen_INCLUDE_DIRS})

# ODE
find_package(PkgConfig REQUIRED)
pkg_check_modules(ODE REQUIRED ode)

include_directories(${ODE_INCLUDE_DIRS})

# find dynamic reconfigure api
generate_dynamic_reconfigure_options(
  cfg/Drag.cfg
  cfg/PhysicsSimulator.cfg
  cfg/ThrusterModel.cfg
  )

include_directories(${PROJECT_SOURCE_DIR}/cfg/cpp)

add_message_files(FILES
  SimulationInstruction.msg
  SimulationState.msg
)

add_service_files(FILES
  SimulationCommand.srv
)

generate_messages(
  DEPENDENCIES geometry_msgs std_msgs 
)

# catkin_package parameters: http://ros.org/doc/groovy/api/catkin/html/dev_guide/generated_cmake_api.html#catkin-package
# TODO: fill in what other packages will need to use this package
catkin_package(
    DEPENDS ODE
    CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs tf tf_conversions dynamic_reconfigure uscauv_common auv_msgs seabee3_msgs
    INCLUDE_DIRS include cfg/cpp
    LIBRARIES ${PROJECT_NAME}
)

add_library(${PROJECT_NAME} src/thruster_axis_model.cpp src/ode_conversions.cpp)
target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${Eigen_LIBRARIES} ${ODE_LIBRARIES})

add_executable(physics_simulator nodes/physics_simulator_node.cpp)
# target_link_libraries(physics_simulator auv_physics)
target_link_libraries(physics_simulator ${catkin_LIBRARIES} ${Eigen_LIBRARIES} ${ODE_LIBRARIES} ${PROJECT_NAME})

# Auto-generated by uscauv-add-node
add_executable( thruster_axis_model_test nodes/thruster_axis_model_test_node.cpp )
target_link_libraries(thruster_axis_model_test ${catkin_LIBRARIES} ${Eigen_LIBRARIES})

# Auto-generated by uscauv-add-node
add_executable( thruster_mapper nodes/thruster_mapper_node.cpp )
target_link_libraries(thruster_mapper ${catkin_LIBRARIES} ${Eigen_LIBRARIES})
