<package>
  <name>auv_physics</name>
  <version>0.0.0</version>
  <description>Extremely primitive "hydrodynamics" simulator for AUVs.</description>
  <maintainer email="turtlecannon@gmail.com">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/physics_simulator</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Dylan Foster</author>
o
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>opende</build_depend>
  <build_depend>uscauv_common</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>seabee3_msgs</build_depend>
  <build_depend>eigen</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>opende</run_depend>
  <run_depend>uscauv_common</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>seabee3_msgs</run_depend>
  <run_depend>eigen</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>tf_conversions</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>opende</test_depend> -->
  <!-- <test_depend>uscauv_common</test_depend> -->
  <!-- <test_depend>auv_msgs</test_depend> -->
  <!-- <test_depend>seabee3_msgs</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lauv_physics" cflags="-I${prefix}/include -I${prefix}/cfg/cpp"/>
</export>

</package>