<package>
  <name>image_segmentation</name>
  <version>0.0.0</version>
  <description>image_segmentation</description>
  <maintainer email="turtlecannon@gmail.com">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/image_segmentation</url>
  <!-- <url type="bugtracker"></url> -->

  <author>nalyd</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>uscauv_common</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>uscauv_common</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>uscauv_common</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

</package>