<package>
  <name>image_transforms</name>
  <version>0.0.0</version>
  <description>image_transforms</description>
  <maintainer email="turtlecannon@gmail.com">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/image_transforms</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Edward T. Kaszubski ( ekaszubski@gmail.com )</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>quickdev_cpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>camera_info_manager</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>quickdev_cpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>camera_info_manager</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>quickdev_cpp</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->
  <!-- <test_depend>camera_info_manager</test_depend> -->

<export>
    <nodelet plugin="${prefix}/nodelets/nodelet_plugins.xml"/>
</export>

</package>