<package>
  <name>object_tracking</name>
  <version>0.0.0</version>
  <description>object_tracking</description>
  <maintainer email="turtlecannon@gmail.com">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/object_tracking</url>
  <!-- <url type="bugtracker"></url> -->

  <author>nalyd</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>uscauv_common</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>uscauv_common</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>shape_matching</run_depend>
  <run_depend>color_classification</run_depend>
  <run_depend>eigen</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>uscauv_common</test_depend> -->
  <!-- <test_depend>auv_msgs</test_depend> -->
  <!-- <test_depend>image_geometry</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>shape_matching</test_depend> -->
  <!-- <test_depend>color_classification</test_depend> -->

</package>