<package>
  <name>seabee3_actions</name>
  <version>0.0.0</version>
  <description>seabee3_actions</description>
  <maintainer email="turtlecannon@gmail.com">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/seabee3_actions</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Edward T. Kaszubski ( ekaszubski@gmail.com )</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib</build_depend>
  <build_depend>seabee3_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib</run_depend>
  <run_depend>seabee3_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>seabee3_msgs</test_depend> -->

</package>