<package>
  <name>seabee3_common</name>
  <version>0.0.0</version>
  <description>seabee3_common</description>
  <maintainer email="turtlecannon@gmail.com">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/seabee3_common</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Edward T. Kaszubski ( ekaszubski@gmail.com )</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>seabee3_msgs</build_depend>
  <build_depend>seabee3_actions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_geometry</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>seabee3_msgs</run_depend>
  <run_depend>seabee3_actions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  
  <build_depend>cpp11</build_depend>
  <run_depend>cpp11</run_depend>

  
  <!-- dependencies needed only for running tests. -->
  <!-- <test_depend>quickdev_cpp</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->
  <!-- <test_depend>seabee3_msgs</test_depend> -->
  <!-- <test_depend>seabee3_actions</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>image_geometry</test_depend> -->

</package>