<package>
  <name>seabee3_driver</name>
  <version>0.0.0</version>
  <description>seabee3_driver</description>
  <maintainer email="turtlecannon@gmail.com">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/seabee3_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Edward T. Kaszubski ( ekaszubski@gmail.com )</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>quickdev_cpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>seabee3_msgs</build_depend>
  <build_depend>seabee3_common</build_depend>
  <build_depend>uscauv_common</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>quickdev_cpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>seabee3_msgs</run_depend>
  <run_depend>seabee3_common</run_depend>
  <run_depend>uscauv_common</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>quickdev_cpp</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->
  <!-- <test_depend>seabee3_msgs</test_depend> -->
  <!-- <test_depend>seabee3_common</test_depend> -->
  <!-- <test_depend>uscauv_common</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lseabee3_driver" cflags="-I${prefix}/include"/>
    <nodelet plugin="${prefix}/nodelets/nodelet_plugins.xml"/>
</export>

</package>