<package>
  <name>seabee3_msgs</name>
  <version>0.0.0</version>
  <description>seabee3_msgs</description>
  <maintainer email="ekaszubski@gmail.com">Edward T. Kaszubski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/seabee3_msgs</url>

  <author>Edward T. Kaszubski ( ekaszubski@gmail.com )</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>